seaqt/QtWidgets/gen_qwidgetaction.h

class QMetaObject;
class QObject;
class QWidget;
class QWidgetAction;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
typedef struct QWidgetAction QWidgetAction;
QWidgetAction* QWidgetAction_new(QObject* parent);
QMetaObject* QWidgetAction_metaObject(const QWidgetAction* self);
void* QWidgetAction_metacast(QWidgetAction* self, const char* param1);
int QWidgetAction_metacall(QWidgetAction* self, int param1, int param2, void** param3);
struct miqt_string QWidgetAction_tr(const char* s);
struct miqt_string QWidgetAction_trUtf8(const char* s);
void QWidgetAction_setDefaultWidget(QWidgetAction* self, QWidget* w);
QWidget* QWidgetAction_defaultWidget(const QWidgetAction* self);
QWidget* QWidgetAction_requestWidget(QWidgetAction* self, QWidget* parent);
void QWidgetAction_releaseWidget(QWidgetAction* self, QWidget* widget);
struct miqt_string QWidgetAction_tr2(const char* s, const char* c);
struct miqt_string QWidgetAction_tr3(const char* s, const char* c, int n);
struct miqt_string QWidgetAction_trUtf82(const char* s, const char* c);
struct miqt_string QWidgetAction_trUtf83(const char* s, const char* c, int n);
bool QWidgetAction_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QWidgetAction_virtualbase_metaObject(const void* self);
bool QWidgetAction_override_virtual_metacast(void* self, intptr_t slot);
void* QWidgetAction_virtualbase_metacast(void* self, const char* param1);
bool QWidgetAction_override_virtual_metacall(void* self, intptr_t slot);
int QWidgetAction_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QWidgetAction_override_virtual_event(void* self, intptr_t slot);
bool QWidgetAction_virtualbase_event(void* self, QEvent* param1);
bool QWidgetAction_override_virtual_eventFilter(void* self, intptr_t slot);
bool QWidgetAction_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QWidgetAction_override_virtual_createWidget(void* self, intptr_t slot);
QWidget* QWidgetAction_virtualbase_createWidget(void* self, QWidget* parent);
bool QWidgetAction_override_virtual_deleteWidget(void* self, intptr_t slot);
void QWidgetAction_virtualbase_deleteWidget(void* self, QWidget* widget);
bool QWidgetAction_override_virtual_timerEvent(void* self, intptr_t slot);
void QWidgetAction_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QWidgetAction_override_virtual_childEvent(void* self, intptr_t slot);
void QWidgetAction_virtualbase_childEvent(void* self, QChildEvent* event);
bool QWidgetAction_override_virtual_customEvent(void* self, intptr_t slot);
void QWidgetAction_virtualbase_customEvent(void* self, QEvent* event);
bool QWidgetAction_override_virtual_connectNotify(void* self, intptr_t slot);
void QWidgetAction_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QWidgetAction_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QWidgetAction_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QWidgetAction_staticMetaObject();
void QWidgetAction_delete(QWidgetAction* self);